Thu Oct 10 14:49:10 1996  Kevin Layer  <layer@freezer>

	* fi-clman.el: use fi::library-directory
	* fi-keys.el: put back newline hack for win95's command.com
	* fi-site-init.el: load-file-name not available in all versions of
	emacs

Wed Oct  9 01:17:25 1996  Kevin Layer  <layer@freezer>

	* Makefile: add `tiger'

Wed Oct  9 00:57:03 1996  Kevin Layer  <layer@freezer>

	* Makefile: fix rdist rule

*******************************************************************************
2.0.20.alpha.5 release for ACL on Windows
*******************************************************************************

Thu Oct 03 14:01:48 1996    <layer@HOBART>

	* fi-keys.el: remove windows newline hack (fix it for real
	elsewhere)
	* fi-shell.el: do "cmd /q" on NT so newlines work
	* fi-version.el: new variable *on-windows-nt*
	* makefile.win32: add clman.exe to default rule

Thu Oct 03 10:55:11 1996    <layer@HOBART>

	* clman.c: use network byte order
	* clman.h: use network byte order
	* makefile.win32: use wsock32.lib for network byte order routines

Thu Oct  3 10:53:53 1996  Kevin Layer  <layer@freezer>

	* makeman.c: more stuff into network byte order

Thu Oct  3 00:13:21 1996  Kevin Layer  <layer@freezer>

	* clman.data added to repository
	* manual/OBLIST.el added to repository
	* clman.h: include netinet/in.h for htonl() macro
	* makeman.c: convert to network byte order
 	* fi-clman.el: make more friendly in the face of no manual/
	directory.
	
*******************************************************************************
2.0.20 alpha.4 release for ACL on Windows
*******************************************************************************

Thu Sep 26 12:26:01 1996  Kevin Layer  <layer@freezer>

	* fi-clman.el: fix the way various things are found (ie, don't use
	load-path use the directory in which fi-clman lives in).
	* fi-site-init.el: don't autoload fi-clman, since that can't use
	load-path anymore
