@@ -8,7 +8,7 @@
 ;; Franz Incorporated provides this software "as is" without
 ;; express or implied warranty.
 
-;; $Id: fi-keys.el,v 1.99 1996/10/10 21:50:26 layer Exp $
+;; $Id: fi-keys.el,v 1.100 1996/10/11 00:33:05 layer Exp $
 
 (cond ((eq fi::emacs-type 'xemacs19)
        (require 'tags "etags"))
@@ -396,9 +396,7 @@ parsed, the enclosing list is processed."
       (progn
 	(move-marker fi::last-input-start
 		     (process-mark (get-buffer-process (current-buffer))))
-	(if (and (on-ms-windows) (not *on-windows-nt*))
-	    (insert "\n\r")
-	  (insert "\n"))
+	(insert "\n")
 	(funcall indent-line-function)
 	(move-marker fi::last-input-end (point)))
 
@@ -526,7 +524,9 @@ subprocess mode."
       (progn
 	(move-marker fi::last-input-start
 		     (process-mark (get-buffer-process (current-buffer))))
-	(insert "\n")
+	(if (and (on-ms-windows) (not *on-windows-nt*))
+	    (insert "\n\r")
+	  (insert "\n"))
 	(move-marker fi::last-input-end (point)))
     (let ((max (point)))
       (beginning-of-line)
